--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,7 +5,7 @@ test:
   adapter: async
 
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
+  # adapter: redis
+  # url: redis://localhost:6379/1
   REDISTOGO_URL: redis://redistogo:00aa472778e95600f3e3312f62931145@jack.redistogo.com:10930/
 
